For cases where there is no prefix, the path to oma2.app is used Updated help This is the released Version 0.5

--- a/branches/oma2_threaded/oma2/oma2/oma2_help/Image_Processing_files/Image_Processing.css
+++ b/branches/oma2_threaded/oma2/oma2/oma2_help/Image_Processing_files/Image_Processing.css
@@ -23,6 +23,28 @@
     text-indent: -14px;
     text-transform: none;
 }
+.paragraph_style_1 {
+    color: rgb(88, 77, 77);
+    font-family: 'ArialMT', 'Arial', sans-serif;
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 20px;
+    margin-bottom: 0px;
+    margin-left: 27px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: -27px;
+    text-transform: none;
+}
 .style_External_630_42 {
     position: relative;
 }
