Added tool tip to Highlight Color Selector box.

--- a/branches/oma2_threaded/oma2/oma2/Preferences.xib
+++ b/branches/oma2_threaded/oma2/oma2/Preferences.xib
@@ -400,7 +400,7 @@ Gw
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
-                                        <colorWell id="een-Lp-ji0">
+                                        <colorWell toolTip="Click to select highlight color." id="een-Lp-ji0">
                                             <rect key="frame" x="223" y="87" width="89" height="23"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
